Ignore the csv input data.

--- a/smcgov/.gitignore
+++ b/smcgov/.gitignore
@@ -12,3 +12,6 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# App data
+Restaurant_Health_Inspections.csv
