Updated the Makefile to ensure the cache directory exists.

--- a/mcu/Makefile
+++ b/mcu/Makefile
@@ -5,13 +5,16 @@ all: film.json netflix.json abc.json
 clean:
 	rm film.json netflix.json abc.json
 
-film.json: fetch.py film.csv
+cache:
+	mkdir cache
+
+film.json: fetch.py film.csv cache
 	./fetch.py film.csv | tee film.json
 
-netflix.json: fetch.py netflix.csv
+netflix.json: fetch.py netflix.csv cache
 	./fetch.py netflix.csv | tee netflix.json
 
-abc.json: fetch.py abc.csv
+abc.json: fetch.py abc.csv cache
 	./fetch.py abc.csv | tee abc.json
 
 
