Updated the Makefile to start a server.

--- a/mcu/Makefile
+++ b/mcu/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all
+.PHONY: all clean server
 
 all: film.json netflix.json abc.json
 
@@ -8,6 +8,9 @@ clean:
 cache:
 	mkdir cache
 
+server:
+	python -m SimpleHTTPServer 8000
+
 film.json: fetch.py film.csv cache
 	./fetch.py film.csv | tee film.json
 
@@ -16,5 +19,4 @@ netflix.json: fetch.py netflix.csv cache
 
 abc.json: fetch.py abc.csv cache
 	./fetch.py abc.csv | tee abc.json
-
 
